Fix another JDK11 issue